--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -1,42 +1,43 @@
-.icon {
-	fill: transparent;
-	stroke: transparent;
-	width: 24px;
-	height: 24px;
-}
+// .icon {
+// 	fill: transparent;
+// 	stroke: transparent;
+// 	width: 24px;
+// 	height: 24px;
+// }
 
-.icon--catalog {
-	fill: var(--white);
-}
+// .icon--catalog {
+// 	fill: var(--white);
+// }
 
-.icon--search {
-	stroke: var(--white);
-    width: 32px;
-    height: 32px;
-}
+// .icon--search {
+// 	stroke: var(--white);
+//     width: 32px;
+//     height: 32px;
+// }
 
-.icon--search2 {
-	stroke: var(--grey);
-    width: 32px;
-    height: 32px;
-}
+// .icon--search2 {
+// 	stroke: var(--grey);
+//     width: 32px;
+//     height: 32px;
+// }
 
-.icon--favorite {
-	fill: var(--white);
-}
+// .icon--favorite {
+// 	fill: var(--white);
+// }
 
-.icon--favorite2 {
-	fill: var(--blue);
-}
+// .icon--favorite2 {
+// 	fill: var(--blue);
+// }
 
 
-.icon--fav-btn {
-	fill:  var(--white);
-	stroke: var(--grey);
-	stroke-width: 0.7px;
-} 
+// .icon--fav-btn {
+// 	fill:  var(--white);
+// 	stroke: var(--grey);
+// 	stroke-width: 0.7px;
+// } 
 
-.icon--vk {
-	fill:  var(--white);
-}
+
+// .icon--vk {
+// 	fill:  var(--white);
+// }
 
