--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,15 +20,10 @@ a {
 	color: var(--link-color);
 }
 
-code {
-	background-color: #e9f1f6;
-	padding: 0.2rem;
-	border-radius: 4px;
+.no-scroll {
+	overflow-y: hidden;
 }
 
-pre.code {
-	overflow-x: auto;
-	background-color: #e9f1f6;
-	padding: 1rem;
-	border-radius: 4px;
+.hide {
+	display: none !important;
 }
