--- a/src/scss/blocks/_filters.scss
+++ b/src/scss/blocks/_filters.scss
@@ -2,11 +2,28 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @include mobile {
+        display: none;
+        background: var(--white);
+    
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        padding: 16px;
+        z-index: 1000;
+    }
+
 }
 
 .filter {
     border-bottom: 1px solid var(--secondary-grey);
     padding-bottom: 16px;
+
+    @include mobile {
+        padding: 16px 0;
+    }
 }
 
 .filter__title {
@@ -61,6 +78,10 @@
     gap: 8px;
 
     margin-top: 40px;
+
+    @include mobile {
+        align-items: center;
+    }
 }
 
 .filter__button {
@@ -85,6 +106,7 @@
 .filter__button-top {
     background: var(--blue);
     color: var(--white);
+    order: 1;
 }
 
 .filter__button-bottom {
@@ -92,3 +114,21 @@
     color: var(--black);
 }
 
+.filter-range-sliders {
+    @include mobile {
+        padding-top: 16px;
+    }
+}
+
+// ---------------------------
+.filters-mobile-title {
+    display: none;
+
+    @include mobile {
+        display: block;
+
+        display: flex;
+        gap: 100px;
+        text-align: center;
+    }
+}
