--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -15,7 +15,7 @@
 }
 
 
-.mobile-nav {
+.mobile-nav, .mobile-nav2 {
 	position: fixed;
 	// top: 0;
 	top: -100%;
@@ -28,19 +28,19 @@
     align-items: center;
 	justify-content: center;
     // background: linear-gradient(209deg, #4287b3 -17.38%, #133f6b 78.4%), #276195;
-	background: #8ccae6;
+	background: #f2eeee;
 	transition: all 0.2s ease-in;
 }
 
-.mobile-nav--open {
+.mobile-nav--open, .mobile-nav--open2 {
 	top: 0;
 }
 
-.mobile-nav a {
-	color: #fff;
+.mobile-nav a, .mobile-nav2 a {
+	color: var(--black);
 }
 
-.mobile-nav__list {
+.mobile-nav__list, .mobile-nav__list2 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
